# corvin_leetcode

leetcode/: pyproject.toml  sonar-project.properties
leetcode/leetcode/: main.py
leetcode/tests/: test_main.py
