[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["corvin <corvin.kraft@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.0"
flake8-annotations = "^3.0.1"
flake8-eradicate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
